# MAMUT-routing-tools

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
nix-dev/: flake.nix
src/mamut_routing_tools/: __init__.py  cli.py  geo.py  workspace.py
src/mamut_routing_tools/family/: __init__.py  bridge.py  family.py  naming.py  tw_synthesis.py
src/mamut_routing_tools/generation/: __init__.py  bulk.py  demands.py  matrices.py  pois.py  select.py  single.py  td.py  vrptw.py  writers.py
src/mamut_routing_tools/geometry/: __init__.py  materialize.py
src/mamut_routing_tools/gui/: __init__.py  asgi.py  jobs.py  runtime.py  server.py  solutions.py
src/mamut_routing_tools/gui/static/: index.html
src/mamut_routing_tools/osm/: __init__.py  fetch.py
src/mamut_routing_tools/roadgraph/: __init__.py  build.py  classes.py  osmxml.py  router.py
src/mamut_routing_tools/td/: __init__.py  bridge.py  traffic.py
tests/: conftest.py  test_cli_version.py  test_fetch.py  test_generation.py  test_geo.py  test_gui_server.py  test_gui_solutions.py  test_materialize.py  test_roadgraph.py  test_td_derive.py  test_td_traffic.py
tests/parity/: compare_roadgraph.py  compare_route_geometry.py  julia_metrics.jl
