[project]
name = "mamut-routing-tools"
version = "0.1.0"
description = "Local generation tool suite for MAMUT-routing: OSM acquisition, road-graph engine, route geometry, and CVRP/VRPTW instance generation."
readme = "README.md"
authors = [
    { name = "Florian Rascoussier", email = "onyr.maintainer@gmail.com" },
    { name = "Adrien Pichon" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mamut-routing-lib",
    "typer>=0.12",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "rustworkx>=0.15",
    "httpx>=0.27",
]

[project.scripts]
mamut-tools = "mamut_routing_tools.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mamut_routing_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
