[project]
name = "mamut-routing-tools"
version = "0.4.0"
description = "Local generation tool suite for MAMUT-routing: OSM acquisition, road-graph engine, route geometry, and CVRP / VRPTW / time-dependent (TDVRP, TDVRPTW) instance generation."
readme = "README.md"
authors = [
    { name = "Florian Rascoussier", email = "onyr.maintainer@gmail.com" },
    { name = "Adrien Pichon" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = [
    "vehicle routing problem",
    "VRP",
    "CVRP",
    "VRPTW",
    "TDVRP",
    "TDVRPTW",
    "time-dependent routing",
    "benchmarking",
    "instance generation",
    "OpenStreetMap",
    "OSM",
    "road network",
    "operations research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mamut-routing-lib[pyvrp]>=0.7.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "rustworkx>=0.15",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
kayros = [
    "kayros>=1.1.2",
]

[project.urls]
Repository = "https://github.com/ANR-MAMUT/MAMUT-routing-tools"
Website = "https://mamut-routing.univ-ubs.fr/"

[project.scripts]
mamut-tools = "mamut_routing_tools.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mamut_routing_tools"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".git",
    ".gitignore",
    ".gitmodules",
    ".github",
    "MAMUT-routing-lib",
    "nix-dev",
    "tests",
    "uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
